--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@ngrx/effects": "^14.0.0",
     "@ngrx/store": "^14.0.0",
     "@ngrx/store-devtools": "^14.0.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "@types/jest": "^29.5.10",
     "axios": "^1.6.2",
     "jest": "^29.7.0",
