--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
+  "babel": {
+    "plugins": ["@babel/plugin-syntax-top-level-await"]
+  },
   "name": "pdfsharp-online",
   "version": "0.0.0",
+  "experiments": {
+    "top-level-await": true
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -35,14 +41,23 @@
     "jest": "^29.7.0",
     "jest-preset-angular": "^13.1.4",
     "lodash": "^4.17.21",
+    "pdfjs-dist": "^4.0.269",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "webpack": "^5.89.0",
     "zone.js": "~0.11.4"
   },
+  "peerDependencies": {
+    "pdfjs-dist": "^4.0.269"
+  },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^14.1.0",
     "@angular-devkit/build-angular": "^14.2.2",
     "@angular/cli": "~14.2.2",
     "@angular/compiler-cli": "^14.2.0",
+    "@babel/plugin-syntax-top-level-await": "^7.14.5",
+    "@types/lodash": "^4.14.202",
+    "@types/offscreencanvas": "^2019.7.3",
     "typescript": "~4.7.2"
   },
   "jest": {
