--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "babel": {
-    "plugins": ["@babel/plugin-syntax-top-level-await"]
+    "plugins": [
+      "@babel/plugin-syntax-top-level-await"
+    ]
   },
   "name": "pdfsharp-online",
   "version": "0.0.0",
@@ -18,22 +20,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.0",
-    "@angular/common": "^14.2.0",
-    "@angular/compiler": "^14.2.0",
-    "@angular/core": "^14.2.0",
-    "@angular/forms": "^14.2.0",
-    "@angular/platform-browser": "^14.2.0",
-    "@angular/platform-browser-dynamic": "^14.2.0",
-    "@angular/router": "^14.2.0",
+    "@angular/animations": "^15.2.10",
+    "@angular/common": "^15.2.10",
+    "@angular/compiler": "^15.2.10",
+    "@angular/core": "^15.2.10",
+    "@angular/forms": "^15.2.10",
+    "@angular/platform-browser": "^15.2.10",
+    "@angular/platform-browser-dynamic": "^15.2.10",
+    "@angular/router": "^15.2.10",
     "@fortawesome/angular-fontawesome": "^0.10.2",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@ngrx/effects": "^14.0.0",
-    "@ngrx/store": "^14.0.0",
-    "@ngrx/store-devtools": "^14.0.0",
+    "@ngrx/effects": "^15.0.0",
+    "@ngrx/store": "^15.0.0",
+    "@ngrx/store-devtools": "^15.0.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "@types/jest": "^29.5.10",
@@ -51,14 +53,13 @@
     "pdfjs-dist": "^4.0.269"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^14.1.0",
-    "@angular-devkit/build-angular": "^14.2.2",
-    "@angular/cli": "~14.2.2",
-    "@angular/compiler-cli": "^14.2.0",
+    "@angular-devkit/build-angular": "^15.2.10",
+    "@angular/cli": "~15.2.10",
+    "@angular/compiler-cli": "^15.2.10",
     "@babel/plugin-syntax-top-level-await": "^7.14.5",
     "@types/lodash": "^4.14.202",
     "@types/offscreencanvas": "^2019.7.3",
-    "typescript": "~4.7.2"
+    "typescript": "~4.9.5"
   },
   "jest": {
     "preset": "jest-preset-angular",
