--- a/angular.json
+++ b/angular.json
@@ -75,10 +75,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "pdfsharp-online:build:production"
+              "buildTarget": "pdfsharp-online:build:production"
             },
             "development": {
-              "browserTarget": "pdfsharp-online:build:development"
+              "buildTarget": "pdfsharp-online:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -86,7 +86,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "pdfsharp-online:build"
+            "buildTarget": "pdfsharp-online:build"
           }
         }
       }
